--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <link data-trunk rel="scss" rel="stylesheet" href="styles/sweetalert-core.scss" />
+      <link data-trunk rel="scss" rel="stylesheet" href="styles/sweetalert-theme-dark.scss" />
   </head>
   <body>
     
